# EFIN-vacs-data

./: README.md
.github/workflows/: ci-dataset.yml  tag-airac.yml
dataset/EDMM/: positions.toml  stations.toml
dataset/EDMM/profiles/: EDDM.json  EDMM-EAST.json  EDMM-WEST-NORTH.json  EDMM-WEST-SOUTH.json
dataset/EE/: positions.toml  stations.toml
dataset/EF/: positions.toml  stations.toml
dataset/EF/profiles/: EFIN.json  EF_Generic_regional.json
dataset/EP/: positions.toml  stations.toml
dataset/EP/profiles/: EPWW.json
dataset/EY/: positions.json  stations.json
dataset/EY/profiles/: EYVL.json
dataset/LO/: stations.toml
dataset/LZ/: positions.json  stations.json
dataset/LZ/profiles/: LZBB.json
dataset/VH/: positions.json  stations.json
dataset/VH/profiles/: VHHK.json
docs/dataset/: profiles.md
docs/schemas/: profile.schema.json  profiles.schema.json
tools/: .gitignore  Cargo.toml
tools/cli/: Cargo.toml
tools/cli/src/: cli.rs  main.rs
tools/diagnostics/: Cargo.toml
tools/diagnostics/src/: lib.rs
tools/importer/: Cargo.toml
tools/importer/src/: euroscope.rs  lib.rs  vatglasses.rs
tools/validator/: Cargo.toml
tools/validator/src/: lib.rs
tools/vatglasses/: Cargo.toml
tools/vatglasses/src/: lib.rs  types.rs
