[workspace]
resolver = "3"
members = ["cli", "diagnostics", "validator", "vatglasses"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MorpheusXAUT/vacs-data"

[workspace.dependencies]
clap = { version = "4.5.56", features = ["derive"] }
console = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = { version = "0.9.11+spec-1.1.0", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
vacs-data-diagnostics = { path = "./diagnostics" }
vacs-data-validator = { path = "./validator" }
vacs-data-vatglasses = { path = "./vatglasses" }
vacs-protocol = { git = "https://github.com/MorpheusXAUT/vacs", branch = "v2", default-features = false, features = ["vatsim"] }
vacs-vatsim = { git = "https://github.com/MorpheusXAUT/vacs", branch = "v2", default-features = false, features = ["coverage"] }
